<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.dorianscholz.openlibre.ui.MainActivity">
    <item
        android:id="@+id/action_show_last_scan"
        android:orderInCategory="100"
        android:title="@string/action_show_last_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_full_history"
        android:orderInCategory="100"
        android:title="@string/action_show_all_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_sensor_status"
        android:orderInCategory="100"
        android:title="@string/action_sensor_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_cont_nfc_reading"
        android:orderInCategory="100"
        android:title="DEBUG cont. NFC read"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_clear_plot"
        android:orderInCategory="100"
        android:title="DEBUG clear plot"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_reparse_raw_data"
        android:orderInCategory="100"
        android:title="DEBUG reparse data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_debug_data"
        android:orderInCategory="100"
        android:title="delete DEBUG data"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_debug_not_ready"
        android:orderInCategory="100"
        android:title="DEBUG sensor not ready"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_debug_export_data"
        android:orderInCategory="100"
        android:title="DEBUG export data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_plot_readings"
        android:orderInCategory="100"
        android:title="DEBUG plot readings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_value2"
        android:orderInCategory="100"
        android:title="DEBUG scan 2"
        app:showAsAction="never"
        android:visible="false" />
</menu>
