<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="20dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/account"
        android:textColor="?android:attr/textColorPrimary"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <TextView
        android:text="@string/logging_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_account"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <ProgressBar
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_login"
        android:max="100"
        android:progress="50"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateDuration="10000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/synchronization"
        android:textColor="?android:attr/textColorPrimary"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <TextView
        android:text="@string/not_synchronized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sync_status"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <ProgressBar
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_sync"
        android:max="100"
        android:progress="50"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <Button
        android:text="@string/synchronize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_sync_or_cancel"
        android:enabled="false" />

</LinearLayout>