<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/export_data_type" />

            <Spinner
                android:id="@+id/spinner_data_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/export_output_format" />

            <Spinner
                android:id="@+id/spinner_output_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_margin" />

    <Button
        android:id="@+id/button_export_or_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export" />

    <ProgressBar
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_export"
        android:max="100"
        android:progress="50"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_export_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center" />

</LinearLayout>